Criados os arquivos base

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,5 +1,71 @@
-$bg-color: green;
+/*--------------------------------------------------------------
+# Base
+--------------------------------------------------------------*/
 
-body {
-  background-color: $bg-color;
-}
+/* Normalize
+--------------------------------------------- */
+@import "base/normalize";
+
+/* Variables
+--------------------------------------------- */
+@import "base/variables";
+
+/* Typography
+--------------------------------------------- */
+@import "base/typography";
+
+/* Body
+--------------------------------------------- */
+@import "base/body";
+
+/*--------------------------------------------------------------
+# Components
+--------------------------------------------------------------*/
+
+/* Buttons
+--------------------------------------------- */
+@import "components/buttons";
+
+/*--------------------------------------------------------------
+# Layouts
+--------------------------------------------------------------*/
+
+/* Header
+--------------------------------------------- */
+@import "layouts/header";
+
+/* Footer
+--------------------------------------------- */
+@import "layouts/footer";
+
+/* Forms
+--------------------------------------------- */
+@import "layouts/forms";
+
+/* Grid
+--------------------------------------------- */
+@import "layouts/grid";
+
+/*--------------------------------------------------------------
+# Pages
+--------------------------------------------------------------*/
+
+/* Home
+--------------------------------------------- */
+@import "pages/home";
+
+/*--------------------------------------------------------------
+# Utils
+--------------------------------------------------------------*/
+
+/* Functions
+--------------------------------------------- */
+@import "utils/functions";
+
+/* Mixins
+--------------------------------------------- */
+@import "utils/mixins";
+
+/* Helpers
+--------------------------------------------- */
+@import "utils/helpers";
